# vorflow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
etc/: environment.yml
examples/: basic_example.ipynb  comprehensive_demo.ipynb
src/vorflow/: __init__.py  blueprint.py  engine.py  tessellator.py  utils.py
src/vorflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_conceptual_mesh.py  test_integration_gmsh.py  test_pipeline.py  test_utils.py  test_voronoi_tessellator.py
