[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vorflow"
version = "0.0.1"
description = "Voronoi mesh generation for MODFLOW 6 using Gmsh and Geopandas"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "shapely",
    "scipy",
    "gmsh",               # The official python SDK
    "matplotlib"          # For visualization
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "jupyter"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]